Correct top teaser image offset to match heading top line alignment

--- a/scss/components/teaser.scss
+++ b/scss/components/teaser.scss
@@ -17,7 +17,7 @@
     @include media-breakpoint-up(lg) {
       float: left;
       max-width: 35%;
-      margin-top: rem-calc(8);
+      margin-top: rem-calc(4);
       margin-right: rem-calc(24);
     }
   }
